--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ body {
     min-height: 100%;
     margin: 0;
     background: #112b45;
+    color: #fff;
 }
 
 #home-banner {
@@ -191,20 +192,60 @@ body {
     padding: 2rem 0;
 }
 
-#expansions-series-containers {
+.expansions-wrapper {
+    max-width: 80%;
     display: flex;
     flex-wrap: wrap;
-    margin: -0.375rem;
+    margin: 125px auto;
 }
 
-#expansions-container {
-    border: 1px solid white;
-    border-radius: 0.375rem;
+.expansions-card {
+    width: 300px;
+    border: 1px solid #000;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
-    margin: 0.375rem;
-    padding: 1rem;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5px;
+    text-align: center;
+    transition: .5s;
+    margin: 3px 3px;
 }
+
+.card-title {
+    color: white;
+}
+
+.expansions-card .card-title {
+    font-size: 16px;
+    font-family: Do Hyeon,sans-serif;
+    text-transform: uppercase;
+}
+
+.expansions-card img {
+    width: 90%;
+}
+
+.expansions-card:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px,
+    rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+/*.expansions-series-containers {*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    margin: -0.375rem;*/
+/*}*/
+
+/*.expansions-container {*/
+/*    border: 1px solid white;*/
+/*    border-radius: 0.375rem;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    margin: 0.375rem;*/
+/*    padding: 1rem;*/
+/*}*/
 
 @media (min-width: 768px) {
     #home-banner-inner-content {
