Cards style fixes 2

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,13 +206,6 @@ a {
     margin: 125px auto;
 }
 
-.cards-wrapper {
-    max-width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 125px auto;
-}
-
 .expansions-card {
     width: 300px;
     border: 1px solid white;
@@ -246,6 +239,14 @@ a {
     rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
+.expansion-full-img {
+    text-align: center;
+}
+
+.expansion-full-img > img {
+    width: 100%;
+}
+
 .expansion-cards {
     width: 300px;
     display: flex;
@@ -258,18 +259,45 @@ a {
     margin: 3px 3px;
 }
 
-.card {
+.cards-top-wrapper {
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 125px auto;
+}
+
+.cards-bottom-wrapper {
+    border-top: 1px solid white;
+    max-width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    /*margin: 125px auto;*/
+    padding: 75px;
+}
+
+.card-container {
     font-size: 16px;
     font-family: Do Hyeon,sans-serif;
     text-transform: uppercase;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5px;
+    text-align: center;
+    transition: .5s;
+    margin: 20px 3px;
+}
+
+.card-container > p {
+    border: 1px solid white;
+    border-radius: 5px;
+    width: 50%;
 }
 
 .card img {
     width: 200px;
-}
-
-.expansion-full-img > img {
-    width: 20%;
 }
 
 @media (min-width: 768px) {
