--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -21,6 +21,61 @@ html {
 body {
     width: 100%;
     height: 100%;
+    background: #112b45;
+    color: #fff;
+}
+
+/* Welcome Blade */
+.page-brand {
+    width: 100%;
+    border-bottom: 3px solid #eee;
+    background-color: #020407;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    img {
+        width: 90px;
+        height: 90px;
+    }
+}
+
+#welcome-container {
+    height: inherit;
+    .row {
+        height: inherit;
+    }
+
+    .left-side,
+    .right-side {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .left-side { border-right: 3px solid #eee; }
+    .right-side { border-left: 3px solid #eee; }
+
+    .content-wrapper {
+        img {
+            width: 150px;
+            height: 150px;
+        }
+        .link-wrapper a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-decoration: none;
+            color: #fff;
+            padding: 10px;
+            transition: .7s;
+            &:hover {
+                border: 2px solid #eee;
+                border-radius: 10px;
+                background-color: #020407;
+            }
+        }
+    }
 }
 
 a {
